--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -304,6 +304,11 @@ scp ubuntu@3.20.44.152:/var/www/research-frontend/public/consents  C:\Users\Chid
         height: 150vh !important;
     }
 
+
+    .content {
+        padding: 50px 30px;
+    }
+
     .navbar-header {
         border-bottom: none;
         border-bottom: 1px solid #714c222e;
