--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -309,6 +309,10 @@ scp ubuntu@3.20.44.152:/var/www/research-frontend/public/consents  C:\Users\Chid
         padding: 50px 30px;
     }
 
+    .widget.widget-stats.bg-gradient-purple {
+        display: none;
+    }
+
     .navbar-header {
         border-bottom: none;
         border-bottom: 1px solid #714c222e;
