--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -115,6 +115,12 @@ a.navbar-brand {
     border-bottom: 1px solid #34485f69;
 }
 
+img#sidebar-logo {
+    display : none;
+    width: 150px;
+    margin-left: 30px;
+}
+
 a.btn.btn-primary.btn-block.fundwallet {
     background: #59c7c7;
     border: 1px solid #59c7c7;
@@ -289,6 +295,8 @@ scp ubuntu@3.20.44.152:/var/www/research-frontend/public/consents  C:\Users\Chid
     padding: 40px 80px !important
 }
 
+
+
 @media (max-width:768px){
     .questionpadding {
         padding: 40px 40px !important
@@ -302,6 +310,12 @@ scp ubuntu@3.20.44.152:/var/www/research-frontend/public/consents  C:\Users\Chid
     .sidebar, .sidebar-bg {
         z-index: 10000;
         height: 150vh !important;
+    }
+
+    img#sidebar-logo {
+        display : block;
+        width: 150px;
+        margin-left: 30px;
     }
 
 
