--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,7 +179,7 @@ div.dataTables_wrapper div.dataTables_length label {
 
 .sidebar {
 
-    display: block !important;
+    display: block;
 
 }
 
@@ -386,7 +386,11 @@ scp ubuntu@3.20.44.152:/var/www/research-frontend/public/consents  C:\Users\Chid
     padding: 40px 80px !important
 }
 
-
+@media (min-width :768px) {
+    .sidebar {
+        display: block !important;
+    }
+}
 
 @media (max-width:768px){
     .questionpadding {
@@ -407,8 +411,9 @@ scp ubuntu@3.20.44.152:/var/www/research-frontend/public/consents  C:\Users\Chid
 
     .sidebar{
       
-        display: block !important;
+        display: block;
         z-index: 10000;
+        height: 200vh;
 
     }
 
