--- a/public/css/main.css
+++ b/public/css/main.css
@@ -406,6 +406,9 @@ scp ubuntu@3.20.44.152:/var/www/research-frontend/public/consents  C:\Users\Chid
 }
 
 @media (max-width:768px){
+    li#invest-nav {
+        display: none !important;
+    }
     .questionpadding {
         padding: 40px 40px !important
     }
