--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,26 @@ img.img-responsive.success-gif {
     align-items: center;
 }
 
+.mou-div {
+    margin: 100px 0px;
+    color: #fff;
+    padding: 30px;
+}
+
+.mou-header {
+    color: #ecb82e;
+    text-align: center;
+}
+
+.mou-text-div {
+    overflow: scroll;
+    height: 500px;
+    padding: 35px;
+    border: 1.5px solid #ecb82e;
+    font-size: 16px;
+    line-height: 30px;
+}
+
 .success-p-pay {
     font-size: 20px;
     line-height: 26px;
